# gdtree

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
gdtree/: __main__.py  app.py  end_state_history.py  filestring.py  traverse.py  utils.py
pytree/: __init__.py  __main__.py  app.py  constants.py  directory_tree_entry.py  end_state_history.py  entry_type.py  filestring.py  traversal_history.py  traverse.py  utils.py
src/gdtree/: __init__.py  app.py  filestring.py
test/: __init__.py  test_app.py  test_directory_tree_entry.py  test_end_state_history.py  test_filestring.py  test_pytree.py  test_traversal_history.py  test_traverse.py  test_utils.py
