[metadata]
name = gdtree
version = 0.0.1
author = Sachchit Kunichetty
author_email = skunich@umich.edu
description = Generates a pretty-printed directory tree
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skunichetty/gdtree
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gdtree = gdtree.app:start [colorama]